fix show log order